backups/ec2-audit/20250906_040037/ec2/network_acls.json
{
    "NetworkAcls": [
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-0083a49c20da916ca",
                    "NetworkAclId": "acl-0037fed28dc5ddd69",
                    "SubnetId": "subnet-0f3140e589f876b7f"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-06f2690a6fd215255",
                    "NetworkAclId": "acl-0037fed28dc5ddd69",
                    "SubnetId": "subnet-0398ce2e3e49e8170"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-0cbeab41b6d13136d",
                    "NetworkAclId": "acl-0037fed28dc5ddd69",
                    "SubnetId": "subnet-070e07871e1c1633f"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-0037fed28dc5ddd69",
            "Tags": [],
            "VpcId": "vpc-052d23b49de47f255",
            "OwnerId": "690248313240"
        }
    ]
}
